@@ -2,6 +2,8 @@
        - Removed: displaying widget button right after shipping method change
        - Updated: increased delay for backup widget button displaying mechanism
        - Updated: frontend JavaScript and CSS files registered in a way respecting CCC (Combine, Compress and Cache) setting
+       - Fixed: proper missing order currency rate handling
+       - Removed: loading currency rate from cnb.cz
 2.1.16 - Fixed: Correct loading of Packeta order list in case of paging
 2.1.15 - Added: support for Packeta address validation widget in the cart with 'none', 'optional' and 'required'
          modes of operation. Validated address is saved and used in exports.
